# ChangeLog for net-analyzer/trafshow
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/trafshow/ChangeLog,v 1.23 2006/02/17 16:31:02 jokey Exp $

  17 Feb 2006; Markus Ullmann <jokey@gentoo.org> trafshow-4.0.ebuild,
  trafshow-5.2.1.ebuild:
  Removing virtual/libpcap wrt bug #117898

  16 Oct 2005; Jason Wever <weeve@gentoo.org> trafshow-5.2.1.ebuild:
  Stable on SPARC.

  25 Sep 2005; Marcelo Goes <vanquirius@gentoo.org>
  -files/trafshow-3.1-gentoo.patch, +files/trafshow-5.2.1-gcc4.diff,
  trafshow-5.2.1.ebuild:
  Add gcc4 patch for bug 107143. Thanks to Anatoly Kamchatnov <rev@male.ru>.

  24 Sep 2005; Markus Rothe <corsair@gentoo.org> trafshow-5.2.1.ebuild:
  Stable on ppc64

  20 Sep 2005; Marcelo Goes <vanquirius@gentoo.org> -trafshow-3.1-r1.ebuild,
  trafshow-5.2.1.ebuild:
  x86 stable.

*trafshow-5.2.1 (01 Aug 2005)

  01 Aug 2005; Marcelo Goes <vanquirius@gentoo.org>
  +files/trafshow-5.2.1-gentoo.patch, +trafshow-5.2.1.ebuild:
  Version bump for bug 100864. Thanks to Donald R. Gray Jr
  <donaldgray@dslextreme.com>.

  09 Apr 2005; Markus Rothe <corsair@gentoo.org> trafshow-4.0.ebuild:
  Stable on ppc64

  07 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> trafshow-4.0.ebuild:
  Stable on sparc

  25 Feb 2005; Aaron Walker <ka0ttic@gentoo.org> trafshow-4.0.ebuild:
  Remove unnecessary chown on ${S} that causes problems for users with
  userpriv/usersandbox.

  25 Feb 2005; Aaron Walker <ka0ttic@gentoo.org> trafshow-4.0.ebuild:
  Marked stable on x86.

  13 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> trafshow-4.0.ebuild:
  added ~amd64 to KEYWORDS. fixes #81563

  31 Jan 2005; Daniel Black <dragonheart@gentoo.org> trafshow-3.1-r1.ebuild,
  trafshow-4.0.ebuild:
  virtual/libpcap transition

*trafshow-4.0 (08 Jan 2005)

  08 Jan 2005; Daniel Black <dragonheart@gentoo.org>
  +files/trafshow-4.0-gentoo.patch, +trafshow-4.0.ebuild: