@@ -1,12 +1,15 @@
-MD5 e6fbabb62a0f001577e6ef9437cf39b3 ChangeLog 2872
-RMD160 063e44a363b06cfa2c4c2d3a25b30ea9e99b582f ChangeLog 2872
-SHA256 b831d340bcf787d9ce2d610bd4759bcc1f15e1e4e1c552342113d12fa285c074 ChangeLog 2872
+MD5 38ccae3cd493dd1e65358b272757e6f2 ChangeLog 3054
+RMD160 b9668b48402306a0c821fc21bd12f818a97cdf00 ChangeLog 3054
+SHA256 b6c09008376c4a118f6c87ffe6f20a96f50b2617dbee8c647b36e4a0428aea2a ChangeLog 3054
 MD5 0eaa3123d4ab8173d4f7a1a4be4e1e0f files/digest-trafshow-4.0 60
 RMD160 440e003ab90a9435c9ff8b78aedfdacbfdf25efb files/digest-trafshow-4.0 60
 SHA256 8fe8c55cac0e3478f7d2c5231319739bc4743eadf1e13a61c5cebab0ab072d8c files/digest-trafshow-4.0 60
 MD5 4425dfe640632b461cea181e62bbc704 files/digest-trafshow-5.2.1 63
 RMD160 895d210c31940fd0cc45f42037650d931baab63a files/digest-trafshow-5.2.1 63
 SHA256 e93aaab38c3c95ce5bb30fb37f761aff0c3f781387a65e701d629d0583f2e35e files/digest-trafshow-5.2.1 63
+MD5 e0079de69584284733d9677dd81b5585 files/digest-trafshow-5.2.3 235
+RMD160 3755cab371040d481bdd6418fa188b89d0907b66 files/digest-trafshow-5.2.3 235
+SHA256 b2b1adaf6ca7e7d7556b401efc04329989b5e77a64752933726e413bb7eb19b5 files/digest-trafshow-5.2.3 235
 MD5 18731bc84348a4cbb851177332ba3596 files/trafshow-4.0-gentoo.patch 745
 RMD160 20d323f20559e0dbc888cf7e520bf7eb9c29382e files/trafshow-4.0-gentoo.patch 745
 SHA256 d25ecfd45a7f8fc783a702c5a13b4b77f28919534a293721da348f20639b43e6 files/trafshow-4.0-gentoo.patch 745
@@ -25,3 +28,6 @@ SHA256 46b27c9a196e0cd5bb6712dc110779db59b4dbb422f4e91dcf0841f2d167df52 trafshow
 MD5 61635017b6ab93df959cf6c3bc24048e trafshow-5.2.1.ebuild 1018
 RMD160 4499d1111ec76a1cbe5f0e979056054271d23c4e trafshow-5.2.1.ebuild 1018
 SHA256 11382c16e15d26d4226f25c9cce03ab869522f19fc6541dcdc39d53005558c36 trafshow-5.2.1.ebuild 1018
+MD5 b8f3d5c3a98e4fffb980a1050bd19c2c trafshow-5.2.3.ebuild 991
+RMD160 cde8753196084816753464f76cfb44666efce6d6 trafshow-5.2.3.ebuild 991
+SHA256 36dc1ffe22814d01c9d523fe8838e7bb678a07c122e67ec9f22a08b0b9c050e6 trafshow-5.2.3.ebuild 991
