@@ -1,0 +1,3 @@
+MD5 0b2f0bb23b7832138b7d841437b9e182 trafshow-5.2.3.tgz 142615
+RMD160 f1ae068f898160f16ae9b3cb5f9d73ae3aece6cb trafshow-5.2.3.tgz 142615
+SHA256 ea7e22674a66afcc7174779d0f803c1f25b42271973b4f75fab293b8d7db11fc trafshow-5.2.3.tgz 142615
