@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/trafshow
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/trafshow/ChangeLog,v 1.23 2006/02/17 16:31:02 jokey Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/trafshow/ChangeLog,v 1.24 2006/03/21 23:16:10 jokey Exp $
+
+*trafshow-5.2.3 (21 Mar 2006)
+
+  21 Mar 2006; Markus Ullmann <jokey@gentoo.org> +trafshow-5.2.3.ebuild:
+  Version bump, thanks to Donald R. Gray Jr for testing, closing bug #126476
 
   17 Feb 2006; Markus Ullmann <jokey@gentoo.org> trafshow-4.0.ebuild,
   trafshow-5.2.1.ebuild:
